[package]
name = "hjkl-editor-gui"
description = "Floem adapter for the hjkl modal editor stack."
version.workspace = true
# Not published to crates.io — the floem GUI stack is workspace-only. Enforced
# here so an accidental `cargo publish` (or the release job) can't push it.
publish = false
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
homepage = "https://hjkl.kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"

[dependencies]
hjkl-engine.workspace = true
hjkl-buffer.workspace = true
hjkl-editor.workspace = true
hjkl-vim.workspace = true
floem       = "0.2"
