[package]
name = "hjkl-editor-tui"
description = "Ratatui TUI editor subsystem for the hjkl stack: Style conversions, KeyEvent bridging, form and prompt renderers."
keywords = ["vim", "ratatui", "tui", "editor"]
categories = ["text-editors", "command-line-interface"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm"]

[dependencies]
hjkl-engine.workspace = true
hjkl-form.workspace = true
ratatui = "0.30"
crossterm = { version = "0.29.0", optional = true }
unicode-width.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
