[package]
name = "hjkl-editor"
description = "Front-door for the hjkl modal editor stack: vim engine + rope buffer + registers, in one crate."
keywords = ["vim", "editor", "modal"]
categories = ["text-editors"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl-editor"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[features]
default = ["serde"]
serde = ["hjkl-engine/serde"]
crossterm = ["hjkl-engine/crossterm"]
# Pulls the engine's `ratatui` adapter surface (Style intern, mouse
# Rect helpers). The buffer's ratatui Widget impl now lives in the
# `hjkl-buffer-tui` crate. Default-on for back-compat; non-terminal
# hosts opt out via `default-features = false`.
ratatui = ["hjkl-engine/ratatui", "dep:hjkl-buffer-tui"]

[dependencies]
hjkl-engine.workspace = true
hjkl-buffer.workspace = true
hjkl-buffer-tui = { workspace = true, optional = true }

[dev-dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
