[package]
name = "hjkl-editor"
description = "Front-door for the hjkl modal editor stack: vim engine + rope buffer + registers, in one crate."
keywords = ["vim", "editor", "modal"]
categories = ["text-editors"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[features]
default = ["serde"]
serde = ["hjkl-engine/serde"]
# Re-exports hjkl-buffer-tui types (BufferView, Gutter, Sign, StyleResolver).
# The engine-tui adapter surface now lives in hjkl-engine-tui (#162 phase 2).
# Default-on for back-compat; non-terminal hosts opt out via
# `default-features = false`.
ratatui = ["dep:hjkl-buffer-tui"]

[dependencies]
hjkl-engine.workspace = true
hjkl-buffer.workspace = true
hjkl-buffer-tui = { workspace = true, optional = true }

[dev-dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
# Tests build a vim-driven editor; the lib itself stays discipline-agnostic
# (#267), so this is deliberately a dev-dependency only. Path-only (no version)
# so `cargo publish` drops it, avoiding the first-of-minor publish cycle with
# hjkl-vim (which depends on hjkl-editor's deps and is published later).
hjkl-vim = { path = "../hjkl-vim" }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
