[package]
name = "hjkl-engine-tui"
description = "Ratatui adapters for hjkl-engine — Style conversion + Editor extension methods for ratatui-flavoured input."
keywords = ["ratatui", "vim", "editor", "tui", "style"]
categories = ["text-editors", "command-line-interface"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
rust-version = "1.95"
readme = "README.md"

[dependencies]
hjkl-engine.workspace = true
hjkl-buffer.workspace = true
ratatui = "0.30"
crossterm = { version = "0.29.0", features = ["event-stream"] }

[dev-dependencies]
# Test-only: the vim visual-selection accessors these tests assert on now live
# on `hjkl_vim::VimEditorExt` (#267). This crate stays vim-agnostic at build
# time — the dep is dev-only and no cycle exists (hjkl-vim does not depend on
# hjkl-engine-tui). Path-only (no version) so `cargo publish` drops it — else the
# first release of a new minor fails resolving `hjkl-vim ^X.Y` before hjkl-vim@X.Y
# is on crates.io.
hjkl-vim = { path = "../hjkl-vim" }
regex = "1"
ropey = "1.6"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
