[package]
name = "hjkl-engine"
description = "Vim FSM, motion grammar, and ex commands. Pre-1.0 churn."
keywords = ["vim", "modal", "editor", "fsm"]
categories = ["text-editors"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl-engine"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[features]
default = ["serde"]
serde = ["dep:serde"]
crossterm = ["dep:crossterm"]

[dev-dependencies]
proptest = "1"
serde_json = "1"

[dependencies]
# Phase 5 trait extraction (0.0.26): `crossterm` is optional. Default features
# keep serde on so existing consumers build unchanged; wasm / no_std hosts opt
# out via `default-features = false`. Ratatui adapter surface was extracted to
# `hjkl-engine-tui` in 0.25.0 (#162 phase 2).
hjkl-buffer.workspace = true
bitflags = "2"
crossterm = { version = "0.29.0", features = ["event-stream"], optional = true }
regex = "1"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
