[package]
name = "hjkl-engine"
description = "Vim FSM, motion grammar, and ex commands. Pre-1.0 churn."
keywords = ["vim", "modal", "editor", "fsm"]
categories = ["text-editors"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
# Dev-only: tests/ integration tests exercise vim accessors that now live on
# hjkl_vim::VimEditorExt (#267). Safe here (unlike inline unit tests) because a
# tests/ target links hjkl-engine as an external crate, so `Editor` has a single
# identity and the blanket impl applies. Cargo permits cycles through dev-deps.
# Path-only (no version) on purpose: `cargo publish` drops a versionless dev-dep,
# which breaks the publish-time cycle (hjkl-vim depends on hjkl-engine and is
# published later). Without this, the first release of a new minor fails because
# `hjkl-vim ^X.Y` has nothing to resolve against on crates.io yet.
hjkl-vim = { path = "../hjkl-vim" }
proptest = "1"
serde_json = "1"

[dependencies]
# Ratatui + crossterm adapter surface lives in `hjkl-engine-tui` (#162 phase 3).
# `serde` is optional; wasm / no_std hosts opt out via `default-features = false`.
hjkl-buffer.workspace = true
hjkl-lang.workspace = true
hjkl-vim-types.workspace = true
ropey = "1.6"
bitflags = "2"
regex = "1"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"
tracing = "0.1"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
