[package]
name = "hjkl-ex"
description = "Ex-command registry and dispatch layer for the hjkl editor stack."
keywords = ["vim", "editor", "ex", "command", "modal"]
categories = ["text-editors"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[dependencies]
hjkl-engine.workspace = true
hjkl-buffer.workspace = true
hjkl-lang.workspace = true
# `:jumps` reads the vim jumplist, which lives on the vim discipline rather
# than the engine core (#267). hjkl-ex implements vim ex-commands (`:jumps`,
# `:marks`, `:normal`), so depending on the vim discipline is honest layering,
# not incidental coupling. No cycle: hjkl-vim does not depend on hjkl-ex.
hjkl-vim.workspace = true
regex = "1"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
