[package]
name = "hjkl-form"
description = "Vim-modal forms for hjkl-based apps."
keywords = ["form", "vim", "tui", "modal", "ui"]
categories = ["command-line-interface", "gui"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl-form"
homepage = "https://hjkl.kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
readme = "README.md"

[dependencies]
hjkl-buffer.workspace = true
hjkl-engine.workspace = true
hjkl-vim.workspace = true

[features]
crossterm = ["hjkl-engine/crossterm"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
