[package]
name = "hjkl-fs-watch"
description = "Debounced filesystem watcher wrapper around notify. Tokio-free sync backend for hjkl editors and pickers."
keywords = ["editor", "filesystem", "watch", "notify", "debounce"]
categories = ["filesystem", "text-editors"]
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[dependencies]
crossbeam-channel = "0.5"
notify = "8"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
