[package]
name = "hjkl-fuzzy"
description = "Subsequence fuzzy scorer (score + match positions) for the hjkl editor stack."
keywords = ["fuzzy", "score", "matcher", "editor"]
categories = ["text-processing"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[dependencies]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
