[package]
name = "hjkl-holler-tui"
description = "Ratatui adapter for hjkl-holler: paints active toast notifications in a top-right stack with severity-colored borders."
keywords = ["notifications", "toasts", "tui", "ratatui", "editor"]
categories = ["text-editors", "command-line-interface"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[dependencies]
hjkl-holler.workspace = true
ratatui = "0.30"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
