[package]
name = "hjkl-holler"
description = "Renderer-agnostic notification bus with severity-tagged toasts and ring-buffer history for the hjkl editor stack."
keywords = ["notifications", "toasts", "editor", "tui"]
categories = ["text-editors"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
