[package]
name = "hjkl-hover-tui"
description = "Ratatui adapter for hjkl-hover: paints the hover popup into a ratatui Frame using hjkl-markdown-tui for the content body."
keywords = ["hover", "popup", "tui", "ratatui", "editor"]
categories = ["text-editors", "command-line-interface"]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[dependencies]
hjkl-hover = "0.1"
hjkl-markdown = "0.1"
hjkl-markdown-tui = "0.1"
hjkl-theme = "0.2"
ratatui = "0.30"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
