[package]
name = "hjkl-hover-tui"
description = "Ratatui adapter for hjkl-hover: paints the hover popup into a ratatui Frame using hjkl-markdown-tui for the content body."
keywords = ["hover", "popup", "tui", "ratatui", "editor"]
categories = ["text-editors", "command-line-interface"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[dependencies]
hjkl-hover.workspace = true
hjkl-markdown.workspace = true
hjkl-markdown-tui.workspace = true
hjkl-theme.workspace = true
ratatui = "0.30"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
