[package]
name = "hjkl-icons"
description = "Filetype / directory → icon mapping for the hjkl editor stack, with Nerd-Font, geometric-Unicode, and ASCII fallback sets."
keywords = ["icons", "nerd-font", "editor", "filetype"]
categories = ["text-editors"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[dependencies]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
