[package]
name = "hjkl-info-popup-tui"
description = "Ratatui adapter for hjkl-info-popup: renders the info popup (`:reg`, `:marks`, `:jumps`, `:changes`) as a centered bordered overlay."
keywords = ["popup", "tui", "ratatui", "editor", "info"]
categories = ["text-editors", "command-line-interface"]
version.workspace = true
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/hjkl"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
homepage = "https://hjkl.kryptic.sh"
readme = "README.md"

[dependencies]
hjkl-info-popup.workspace = true
hjkl-markdown.workspace = true
hjkl-markdown-tui.workspace = true
ratatui = "0.30"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
